force-app/main/default/objects/Apttus__AgreementExplorer__c/Apttus__AgreementExplorer__c.object-meta.xml
<CustomObject>
    <description>A reusable, unique combination of Field Sets and Filter Sets.</description>
    <label>Agreement Explorer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Explorer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>