force-app/main/default/objects/Apttus__AgreementExplorer__c/fields/Apttus__AccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account Id associated with this query.</description>
    <inlineHelpText>The Account Id associated with this query.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreement Explorers</relationshipLabel>
    <relationshipName>AgreementExplorers</relationshipName>
    <type>Lookup</type>
</CustomField>