force-app/main/default/objects/Apttus__AgreementExplorer__c/fields/Apttus__Category__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Category__c</fullName>
    <description>Category allows users to search, find, and select explorer records</description>
    <inlineHelpText>Category allows users to search, find, and select explorer records</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>