force-app/main/default/objects/Apttus__AgreementExplorer__c/fields/Apttus__Criteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Criteria__c</fullName>
    <description>The query criteria specification</description>
    <inlineHelpText>The query criteria specification</inlineHelpText>
    <label>Criteria</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>