force-app/main/default/objects/Apttus__AgreementExplorer__c/fields/Apttus__Default__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines if the query in question is the default query for the given context.</description>
    <inlineHelpText>This field determines if the query in question is the default query for the given context.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>