force-app/main/default/objects/Apttus__AgreementExplorer__c/fields/Apttus__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Description__c</fullName>
    <description>The description of the query.</description>
    <inlineHelpText>The description of the query.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>