force-app/main/default/objects/Apttus__AgreementExplorer__c/fields/Apttus__FieldSet__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FieldSet__c</fullName>
    <description>A comma separated list of API names of fields to display in the result set for the query</description>
    <inlineHelpText>A comma separated list of API names of fields to display in the result set for the query</inlineHelpText>
    <label>Result Field Set</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>