force-app/main/default/objects/Apttus__AgreementExplorer__c/fields/Apttus__Keywords__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Keywords__c</fullName>
    <description>Keywords allow users to search, find, and select explorer records</description>
    <inlineHelpText>Keywords allow users to search, find, and select explorer records</inlineHelpText>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>