force-app/main/default/objects/Apttus__AgreementExplorer__c/fields/Apttus__Label__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Label__c</fullName>
    <description>Label allows users to search, find, and select explorer records</description>
    <inlineHelpText>Label allows users to search, find, and select explorer records</inlineHelpText>
    <label>Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>