force-app/main/default/objects/Apttus__AgreementExplorer__c/fields/Apttus__Title__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Title__c</fullName>
    <description>A forumla field that shows up as a link on the Agreement Explorer tab, which will direct user to the result page once clicked.</description>
    <formula>CASE(Apttus__Context__c,
  &quot;Agreement&quot;,HYPERLINK(&quot;/apex/Apttus__AgreementExplorerResults?queryId=&quot; &amp; Id &amp; &quot;&amp;context=Agreement&quot;, Name ),
  &quot;Agreement By Account(s)&quot;, HYPERLINK(&quot;/apex/Apttus__AgreementExplorerResults?queryId=&quot; &amp; Id &amp; &quot;&amp;context= Agreement By Account(s)&quot;, Name ),
  &quot;Agreement Search&quot;,  HYPERLINK(&quot;/apex/Apttus__AgreementExplorerResults?queryId=&quot; &amp; Id &amp; &quot;&amp;context=Agreement Search&quot;, Name), &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A forumla field that shows up as a link on the Agreement Explorer tab, which will direct user to the result page once clicked.</inlineHelpText>
    <label>Title</label>
    <type>Text</type>
</CustomField>