force-app/main/default/objects/Apttus__AgreementExplorer__c/listViews/Apttus__All.listView-meta.xml
<ListView>
    <fullName>Apttus__All</fullName>
    <columns>Apttus__Title__c</columns>
    <columns>Apttus__Context__c</columns>
    <columns>Apttus__Category__c</columns>
    <columns>Apttus__Label__c</columns>
    <columns>Apttus__Keywords__c</columns>
    <columns>Apttus__Description__c</columns>
    <columns>Apttus__Public__c</columns>
    <columns>Apttus__Default__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>